# frozen-in-time

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  package.sh
demo_scripts/lua_example/: scene-cave-1.yaml  scene-river-1-.yaml
include/game/: cparser.hpp  game.hpp  state.hpp
include/ui/: animations.hpp  assets.hpp  context.hpp  layout.hpp  text.hpp  ui.hpp  ui_elements.hpp
include/utils/: file_access.hpp
res/demo_scripts/: global.sc  scene1.sc
src/engine/: .global.hpp.swp  global.hpp
src/engine/core/: core.cpp  core.hpp
src/engine/core/actions/: action.cpp  action.hpp
src/engine/cparser/: cparser.hpp
src/engine/dl/: .dl.cpp.swp  .dl.hpp.swp  dl.cpp  dl.hpp  entity.cpp  entity.hpp
src/engine/sparser/: parser.hpp  sparser.cpp  sparser.hpp
src/engine/ui/: ui.cpp  ui.hpp
src/engine/utils/file_access/: file_access.hpp
src/engine/utils/parser/: parser.cpp  parser.hpp
src/game/: cparser.cpp  game.cpp  game.hpp  state.cpp  state.hpp
src/ui/: animations.cpp  assets.cpp  context.cpp  text.cpp  ui.cpp  ui_elements.cpp
src/utils/: file_access.cpp
